--- a/learnExpress/package.json
+++ b/learnExpress/package.json
@@ -9,7 +9,9 @@
   "author": "affan",
   "license": "ISC",
   "devDependencies": {
-    "express": "^4.17.3"
+    "axios": "^0.26.1",
+    "express": "^4.17.3",
+    "morgan": "^1.10.0"
   },
   "dependencies": {
     "body-parser": "^1.20.0",
