--- a/learnExpress/package.json
+++ b/learnExpress/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "body-parser": "^1.20.0",
-    "express-device": "^0.4.2"
+    "express-device": "^0.4.2",
+    "mongoose": "^6.3.3"
   }
 }
